@@ -245,7 +245,7 @@ static void nntp_cache_getfile(c_nntp_files_u *fc, ParHandler *parhandler, meta_
 	for (gii=giibegin; gii!=giiend; ++gii) {
 		info = *gii;
 		if ((info->flags&GETFILES_GETINCOMPLETE || f->iscomplete()) && (info->flags&GETFILES_NODUPEIDCHECK || !(midinfo->check(f->bamid()))) && (*info->pred)(f.gimmethepointer())){//matches user spec
-			if (!(info->flags&(GETFILES_NOAUTOPAR|GETFILES_TESTMODE|GETFILES_MARK|GETFILES_UNMARK))) {
+			if (!(info->flags&GETFILES_AUTOPAR_DISABLING_FLAGS)) {
 				if (parhandler->maybe_add_parfile(f, info->path, info->temppath))
 					continue;
 			}
